discussion/kv_engine/141059/141059_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Pass cookie as Traceable& to EPE:processUnknownCommand

Change-Id: Iaac6b42a837637fd266063bbda1327ae5dbf3453

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-26 14:15:12.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-26 16:13:01.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5910/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/server_cookie_iface.h:102:39: error: no member named "tracing" in namespace "cb" [clang-diagnostic-error]
    bool is_collections_supported(cb::tracing::Traceable& traceable) {
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5910/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/server_cookie_iface.h:102:39:
error: no member named "tracing" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5910/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6434/ : FAILURE

Failure of GoogleTest "BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific":

<pre>
[ RUN      ] BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific
[2020-11-26T14:48:46.658Z] ../kv_engine/tests/testapp_cluster/misc_tests.cc:231: Failure
[2020-11-26T14:48:46.658Z] Value of: dcp_mutation
[2020-11-26T14:48:46.658Z]   Actual: true
[2020-11-26T14:48:46.658Z] Expected: false
[2020-11-26T14:48:46.658Z] [  FAILED  ] BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific (3 ms)
BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6434/ )

Failure of a CTest test [2020-11-26T14:48:46.658Z]   1/409 Test #406: cluster_test ................................................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6434/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7358/ : FAILURE

Failure of GoogleTest "BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific":

<pre>
[ RUN      ] BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific
[2020-11-26T15:11:20.233Z] ../kv_engine/tests/testapp_cluster/misc_tests.cc:231: Failure
[2020-11-26T15:11:20.233Z] Value of: dcp_mutation
[2020-11-26T15:11:20.233Z]   Actual: true
[2020-11-26T15:11:20.233Z] Expected: false
[2020-11-26T15:11:20.233Z] [  FAILED  ] BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific (3 ms)
BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7358/ )

Failure of a CTest test [2020-11-26T15:11:20.233Z]  26/399 Test #396: cluster_test ................................................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7358/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7467/ : FAILURE

Failure of GoogleTest "BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific":

<pre>
[ RUN      ] BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific
[2020-11-26T15:25:02.545Z] ../kv_engine/tests/testapp_cluster/misc_tests.cc:231: Failure
[2020-11-26T15:25:02.545Z] Value of: dcp_mutation
[2020-11-26T15:25:02.545Z]   Actual: true
[2020-11-26T15:25:02.545Z] Expected: false
[2020-11-26T15:25:02.545Z] [  FAILED  ] BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific (3 ms)
BasicClusterTest.VerifyDcpSurviesResetOfEngineSpecific
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7467/ )

Failure of a CTest test [2020-11-26T15:25:02.544Z]   1/412 Test #409: cluster_test ................................................................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7467/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4445/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32120/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27706/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15288/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7743/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
